@@ -153,7 +153,6 @@ expr_t subst_vars(
 }
 
 
-
 /*******************************************************************************
 
 ********************************************************************************/
@@ -172,10 +171,19 @@ RULE_REWRITE_PRE(EliminateUnusedLetVars)
   expr::FreeVars myVars;
   collect_flw_vars(flwor, myVars);
 
-  const forletwin_clause& flwc = *reinterpret_cast<const forletwin_clause *>(flwor[0]);
-
   csize numClauses = flwor.num_clauses();
   csize numForLetClauses = 0;
+
+  // numClauses may be 0 in the case this flwor became a common sub-expression
+  // due to var-inlining inside an if-then-else expr (see test 
+  // zorba/optim/flwor_vars_02.xq)
+  if (numClauses == 0)
+  {
+    return flwor.get_return_expr();
+  }
+
+  const forletwin_clause& flwc = 
+  *static_cast<const forletwin_clause *>(flwor.get_clause(0));
 
   // "for $x in E return $x"  --> "E"
   // "let $x := E return $x"  --> "E"
@@ -431,7 +439,7 @@ static void collect_flw_vars(
 {
   for (csize i = 0; i < flwor.num_clauses(); ++i)
   {
-    const flwor_clause& c = *flwor[i];
+    const flwor_clause& c = *flwor.get_clause(i);
 
     if (c.get_kind() == flwor_clause::for_clause)
     {
@@ -540,7 +548,7 @@ static bool safe_to_fold_single_use(
 
   for (ulong i = 0; i < flwor.num_clauses(); ++i)
   {
-    const flwor_clause& c = *flwor[i];
+    const flwor_clause& c = *flwor.get_clause(i);
     flwor_clause::ClauseKind kind = c.get_kind();
 
     if (kind == flwor_clause::for_clause)
@@ -765,7 +773,7 @@ static bool var_in_try_block_or_in_loop(
 
     for (ulong i = 0; i < flwor.num_clauses(); ++i)
     {
-      const flwor_clause& c = *flwor[i];
+      const flwor_clause& c = *flwor.get_clause(i);
 
       if (c.get_kind() == flwor_clause::for_clause ||
           c.get_kind() == flwor_clause::let_clause)
@@ -1105,11 +1113,11 @@ RULE_REWRITE_PRE(MergeFLWOR)
     // after where, groupby, or orderby clauses,
     if (!flwor->is_general())
     {
-      ulong numClauses = flwor->num_clauses();
+      csize numClauses = flwor->num_clauses();
 
-      for (ulong i = 0; i < numClauses; ++i)
+      for (csize i = 0; i < numClauses; ++i)
       {
-        const flwor_clause* c = (*flwor)[i];
+        const flwor_clause* c = flwor->get_clause(i);
 
         if (c->get_kind() == flwor_clause::where_clause ||
             c->get_kind() == flwor_clause::group_clause ||
@@ -1120,11 +1128,11 @@ RULE_REWRITE_PRE(MergeFLWOR)
       }
     }
 
-    ulong numClauses = returnFlwor->num_clauses();
+    csize numClauses = returnFlwor->num_clauses();
     
-    for (ulong i = 0; i < numClauses; ++i)
+    for (csize i = 0; i < numClauses; ++i)
     {
-      const flwor_clause* c = (*returnFlwor)[i];
+      const flwor_clause* c = returnFlwor->get_clause(i);
       
       if (c->get_kind() == flwor_clause::group_clause ||
           c->get_kind() == flwor_clause::order_clause)
